Fix to overflowing sort on small screen.

--- a/themes/finna2/less/finna/myresearch.less
+++ b/themes/finna2/less/finna/myresearch.less
@@ -766,6 +766,12 @@
       padding-right: 3px;
     }
   }
+  .mylist-controls .sort-button .dropdown-menu {
+    @media (max-width: 400px) and (min-width: 360px) {
+      left: auto;
+      right: 0;
+    }
+  }
 }
 
 .useraccount-nav-mobile {
